Changes for Crypt::PBKDF2

{{$NEXT}}

Version 0.110460: 2011-02-14
  * Miscellaneous documentation improvements.
  * Optional arguments to "generate" and "validate" have been removed. The
    mandatory arguments remain the same. If you want to override options,
    clone the object instead.
  * MooseX::MethodSignatures replaced with Method::Signatures::Simple, which
    should improve speed noticeably.

Version 0.101170: 2010-04-26
  * Updated SEE ALSO section.
  * Repository in META.
  * Added Changes file.

Version 0.101160: 2010-04-26
  * Initial release to CPAN.
  * HMACSHA1, HMACSHA2, and DigestHMAC hashers included.