@@ -1,6 +1,7 @@
 Changes for Crypt::PBKDF2
 
 {{$NEXT}}
+  * Fix bug related to instantiation of "hasher".
 
 Version 0.110460: 2011-02-14
   * Miscellaneous documentation improvements.
